# practica_c-_Info2

./: LICENSE
Ejercicio01/: CMakeLists.txt  main.cpp  punto.cpp  punto.h
Ejercicio02/: CMakeLists.txt  Ejercicio02.pro  main.cpp  punto.cpp  utils.cpp  utils.h
Ejercicio03/: CMakeLists.txt  main.cpp  punto.cpp  punto.h
Ejercicio04/: CMakeLists.txt  main.cpp  punto.cpp  punto.h
Ejercicio05/: CMakeLists.txt  main.cpp  punto.cpp  punto.h
Ejercicio06/: alumno.cpp  alumno.h  main.cpp
Ejercicio11-punto/: Ejercicio11-punto.pro  main.cpp  punto.cpp  punto.h
Ejercicio12-string/: Ejercicio12-string.pro  main.cpp  mistring.cpp  mistring.h
Ejercicio13/: Ejercicio13.pro  main.cpp  mivector.cpp  mivector.h
Ejercicio14/: Ejercicio14.pro  alumno.cpp  alumno.h  main.cpp
Ejercicio17/: Ejercicio17.pro  fechahora.cpp  fechahora.h  horario.cpp  horario.h  main.cpp
Ejercicio18/: Ejercicio18.pro  admin.cpp  admin.h  empleado.cpp  empleado.h  optecnico.cpp  optecnico.h
TPMandrut/: TPMandrut.pro  circulo.cpp  circulo.h  punto.cpp  punto.h
